test/typecheck/pass/exit2.sail

val unit -> [:6:] effect pure test

function [:6:] test () =
{
  exit ();
}